# AddaxAI-WebUI

./: .gitignore  DEVELOPERS.md  IMPLEMENTATION_PLAN_PROJECT_MODELS.md  LICENSE  PROJECT_PLAN.md  README.md  SETUP_STATUS.md  TESTING_LOGGING.md  camera_trap_ux_ui_design.md  electron-build.md  models.json
backend/: .env.example  .gitignore  README.md  addaxai.db-shm  addaxai.db-wal  alembic.ini  backend.spec  pyproject.toml  remove_python_signature.py  requirements.txt  run_dev.sh  run_server.py  test_api.py  test_api_logging.py  test_frontend_logs.py  test_logging.py  test_logging_integration.py
backend/alembic/: env.py
backend/alembic/versions/: 20251213_1127_59fe9613a26f_add_folder_path_to_deployments.py  20251217_1436_e8cc7baae16d_add_detection_model.py  20251223_1538_03ddb73f6866_add_deployment_queue.py  20251224_1134_cc3dc3ddf432_add_models_to_projects.py  20251224_1135_3ee4969ac7fb_remove_models_from_deployment_queue.py  20251228_0931_acc38a37a0ba_replace_taxonomy_config_with_excluded_.py  20251229_0919_353fbc92fc68_add_taxonomic_aggregation_threshold.py  20251229_1203_761c29fe9d41_rename_taxonomic_aggregation_to_rollup.py  20251229_1508_5cac8bb39056_add_country_code_and_state_code_to_.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  logging_config.py  websocket_manager.py
backend/app/db/: __init__.py  base.py
backend/app/ml/: __init__.py  catalog_updater.py  detection.py  environment_manager.py  hf_downloader.py  manifest_manager.py  model_storage.py  taxonomy_parser.py
backend/app/models/: __init__.py  audit_log.py  deployment.py  (+7 more)
(+128 files in other folders)
